@@ -1,3 +1,12 @@
+2001-05-25  Tambet Ingo  <tambet@ximian.com>
+
+	* boot.pl.in (xst_boot_conf_set_images): Reimplement.
+	(xst_boot_conf_add_image): Helper function for (xst_boot_conf_set_images).
+	(xst_boot_conf_edit_image): ditto.
+	(xst_boot_conf_delete_image): ditto.
+	(xst_boot_conf_is_image): ditto.
+	(xst_boot_conf_find_image): ditto.
+
 2001-05-25  Chema Celorio  <chema@celorio.com>
 
 	* boot-conf.in (xml_print_global_kws): remove print. duh !
